crates/cash-parser/src/parser/snapshots/cash_parser__parser__tests__parse_redirection.snap
---
source: cash-parser/src/parser/mod.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo |& wc",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: Some(SourceSpan(
                    start: SourcePosition(
                      index: 0,
                      line: 1,
                      column: 1,
                    ),
                    end: SourcePosition(
                      index: 4,
                      line: 1,
                      column: 5,
                    ),
                  )),
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(File(Some(2), DuplicateOutput, Fd(1))),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "wc",
                  loc: Some(SourceSpan(
                    start: SourcePosition(
                      index: 8,
                      line: 1,
                      column: 9,
                    ),
                    end: SourcePosition(
                      index: 10,
                      line: 1,
                      column: 11,
                    ),
                  )),
                )),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
